--- a/bootstrap1/index.html
+++ b/bootstrap1/index.html
@@ -146,5 +146,27 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
+
+    <div class="container-fluid bg-danger">
+      <div class="row bg-danger">
+        <div class="col text-white text-center py-3">
+          <h1>Pemrogaman</h1>
+        </div>
+        <div class="row">
+          <div class="col-lg-3 col-md-6">
+            <div class="kotak">1</div>
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <div class="kotak">2</div>
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <div class="kotak">3</div>
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <div class="kotak">4</div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
