--- a/bootstrap1/index.html
+++ b/bootstrap1/index.html
@@ -152,18 +152,58 @@
         <div class="col text-white text-center py-3">
           <h1>Pemrogaman</h1>
         </div>
-        <div class="row">
-          <div class="col-lg-3 col-md-6">
-            <div class="kotak">1</div>
+      </div>
+    </div>
+    <div class="row mt-3 g-2">
+      <div class="col-lg-3 col-md-6">
+        <div class="card w-100">
+          <img src="img/gmbr (4).jpg" class="card-img-top" alt="kucing" />
+          <div class="card-body">
+            <h5 class="card-title">Kucing</h5>
+            <p class="card-text">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum,
+              corrupti.
+            </p>
+            <a href="#" class="btn btn-primary">Daftar</a>
           </div>
-          <div class="col-lg-3 col-md-6">
-            <div class="kotak">2</div>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-6">
+        <div class="card w-100">
+          <img src="img/gmbr (4).jpg" class="card-img-top" alt="kucing" />
+          <div class="card-body">
+            <h5 class="card-title">Kucing</h5>
+            <p class="card-text">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum,
+              corrupti.
+            </p>
+            <a href="#" class="btn btn-primary">Daftar</a>
           </div>
-          <div class="col-lg-3 col-md-6">
-            <div class="kotak">3</div>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-6">
+        <div class="card w-100">
+          <img src="img/gmbr (4).jpg" class="card-img-top" alt="kucing" />
+          <div class="card-body">
+            <h5 class="card-title">Kucing</h5>
+            <p class="card-text">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum,
+              corrupti.
+            </p>
+            <a href="#" class="btn btn-primary">Daftar</a>
           </div>
-          <div class="col-lg-3 col-md-6">
-            <div class="kotak">4</div>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-6">
+        <div class="card w-100">
+          <img src="img/gmbr (4).jpg" class="card-img-top" alt="kucing" />
+          <div class="card-body">
+            <h5 class="card-title">Kucing</h5>
+            <p class="card-text">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum,
+              corrupti.
+            </p>
+            <a href="#" class="btn btn-primary">Daftar</a>
           </div>
         </div>
       </div>
