--- a/bootstrap1/index.html
+++ b/bootstrap1/index.html
@@ -158,52 +158,75 @@
       <div class="col-lg-3 col-md-6">
         <div class="card w-100">
           <img src="img/gmbr (4).jpg" class="card-img-top" alt="kucing" />
+
           <div class="card-body">
             <h5 class="card-title">Kucing</h5>
             <p class="card-text">
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum,
               corrupti.
             </p>
-            <a href="#" class="btn btn-primary">Daftar</a>
+            <a href="#" data-bs-toggle="modal" data-bs-target="#Modal" class="btn btn-primary">Daftar</a>
           </div>
         </div>
       </div>
       <div class="col-lg-3 col-md-6">
         <div class="card w-100">
           <img src="img/gmbr (4).jpg" class="card-img-top" alt="kucing" />
+
           <div class="card-body">
             <h5 class="card-title">Kucing</h5>
             <p class="card-text">
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum,
               corrupti.
             </p>
-            <a href="#" class="btn btn-primary">Daftar</a>
+            <a href="#" data-bs-toggle="modal" data-bs-target="#Modal" class="btn btn-primary">Daftar</a>
           </div>
         </div>
       </div>
       <div class="col-lg-3 col-md-6">
         <div class="card w-100">
           <img src="img/gmbr (4).jpg" class="card-img-top" alt="kucing" />
+
           <div class="card-body">
             <h5 class="card-title">Kucing</h5>
             <p class="card-text">
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum,
               corrupti.
             </p>
-            <a href="#" class="btn btn-primary">Daftar</a>
+            <a href="#" data-bs-toggle="modal" data-bs-target="#Modal" class="btn btn-primary">Daftar</a>
           </div>
         </div>
       </div>
       <div class="col-lg-3 col-md-6">
         <div class="card w-100">
           <img src="img/gmbr (4).jpg" class="card-img-top" alt="kucing" />
+
           <div class="card-body">
             <h5 class="card-title">Kucing</h5>
             <p class="card-text">
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum,
               corrupti.
             </p>
-            <a href="#" class="btn btn-primary">Daftar</a>
+            <a href="#" data-bs-toggle="modal" data-bs-target="#Modal" class="btn btn-primary">Daftar</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Button trigger modal -->
+
+    <!-- Modal -->
+    <div class="modal fade" id="Modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">...</div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Save changes</button>
           </div>
         </div>
       </div>
