--- a/bootstrap1/index.html
+++ b/bootstrap1/index.html
@@ -165,7 +165,13 @@
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum,
               corrupti.
             </p>
-            <a href="#" data-bs-toggle="modal" data-bs-target="#Modal" class="btn btn-primary">Daftar</a>
+            <a
+              href="#"
+              data-bs-toggle="modal"
+              data-bs-target="#Modal"
+              class="btn btn-primary"
+              >Daftar</a
+            >
           </div>
         </div>
       </div>
@@ -179,7 +185,13 @@
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum,
               corrupti.
             </p>
-            <a href="#" data-bs-toggle="modal" data-bs-target="#Modal" class="btn btn-primary">Daftar</a>
+            <a
+              href="#"
+              data-bs-toggle="modal"
+              data-bs-target="#Modal"
+              class="btn btn-primary"
+              >Daftar</a
+            >
           </div>
         </div>
       </div>
@@ -193,7 +205,13 @@
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum,
               corrupti.
             </p>
-            <a href="#" data-bs-toggle="modal" data-bs-target="#Modal" class="btn btn-primary">Daftar</a>
+            <a
+              href="#"
+              data-bs-toggle="modal"
+              data-bs-target="#Modal"
+              class="btn btn-primary"
+              >Daftar</a
+            >
           </div>
         </div>
       </div>
@@ -207,31 +225,103 @@
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum,
               corrupti.
             </p>
-            <a href="#" data-bs-toggle="modal" data-bs-target="#Modal" class="btn btn-primary">Daftar</a>
+            <a
+              href="#"
+              data-bs-toggle="modal"
+              data-bs-target="#Modal"
+              class="btn btn-primary"
+              >Daftar</a
+            >
           </div>
         </div>
       </div>
     </div>
 
-    <!-- Button trigger modal -->
+    <!-- Tabel -->
+    <div class="container-fluid">
+      <div class="row bg-danger">
+        <div class="col text-white text-center py-3">
+          <h1>Jadwal</h1>
+        </div>
+      </div>
+    </div>
+    <div class="row justify-content-center">
+      <div class="col-md-4">
+        <table class="table table-responsive">
+          <thead>
+            <tr>
+              <th scope="col">#</th>
+              <th scope="col">Senin</th>
+              <th scope="col">Selasa</th>
+              <th scope="col">Rabu</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th scope="row">1</th>
+              <td>Mark</td>
+              <td>Otto</td>
+              <td>@mdo</td>
+            </tr>
+            <tr>
+              <th scope="row">2</th>
+              <td>Jacob</td>
+              <td>Thornton</td>
+              <td>@fat</td>
+            </tr>
+            <tr>
+              <th scope="row">3</th>
+              <td colspan="2">Larry the Bird</td>
+              <td>@twitter</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
 
     <!-- Modal -->
-    <div class="modal fade" id="Modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div
+      class="modal fade"
+      id="Modal"
+      tabindex="-1"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+    >
       <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
           <div class="modal-header">
-            <h1 class="modal-title fs-5" id="exampleModalLabel">Form Pendaftaran</h1>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            <h1 class="modal-title fs-5" id="exampleModalLabel">
+              Form Pendaftaran
+            </h1>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
           </div>
           <div class="modal-body">
             <form>
               <div class="mb-3">
-                <label for="exampleInputEmail1" class="form-label">Alamat Email</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                <label for="exampleInputEmail1" class="form-label"
+                  >Alamat Email</label
+                >
+                <input
+                  type="email"
+                  class="form-control"
+                  id="exampleInputEmail1"
+                  aria-describedby="emailHelp"
+                />
               </div>
               <div class="mb-3">
-                <label for="exampleInputPassword1" class="form-label">Nama</label>
-                <input type="text" class="form-control" id="exampleInputPassword1">
+                <label for="exampleInputPassword1" class="form-label"
+                  >Nama</label
+                >
+                <input
+                  type="text"
+                  class="form-control"
+                  id="exampleInputPassword1"
+                />
               </div>
             </form>
           </div>
